fixed z-index

--- a/website2/src/ProgBar/styles.css
+++ b/website2/src/ProgBar/styles.css
@@ -36,7 +36,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    z-index: 2;
+    z-index: 101;
     padding: 0 20px;
   }
 
